--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="css/art-home.css"/>
     <link href="plugins/jquery-ui-1.10.3.custom/css/jquery-ui-1.10.3.custom.min.css" rel="stylesheet">
+    <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="plugins/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="plugins/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.min.js"></script>
+    <script type="text/javascript" src="plugins/bootstrap/js/bootstrap.min.js"></script>
 
 
     <title>Art-project</title>
@@ -20,7 +22,33 @@
 </section>
 
 <section class="body" id="search_form">
-    First name: <input type="text" name="fname"><br>
+
+    <ul class="nav nav-pills">
+        <li class="active"><a href="#">Je recherche</a></li>
+
+        <li class="dropdown">
+            <a class="dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#"><span>N'importe quel artiste</span><b class="caret"></b></a>
+            <ul id="menu2" class="dropdown-menu" role="menu" aria-labelledby="drop5">
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un musicien</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un acteur</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un conteur</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un écrivain</a></li>
+                <li role="presentation" class="divider"></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">N'importe quel artiste</a></li>
+            </ul>
+        </li>
+        <li class="dropdown">
+            <a class="dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#">Dropdown 3 <b class="caret"></b></a>
+            <ul id="menu3" class="dropdown-menu" role="menu" aria-labelledby="drop5">
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+                <li role="presentation" class="divider"></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+            </ul>
+        </li>
+    </ul>
+
 
 </section>
 
