--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,19 +5,22 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="css/art-home.css"/>
-    <link href="plugins/jquery-ui-1.10.3.custom/css/jquery-ui-1.10.3.custom.min.css" rel="stylesheet">
+    <link href="plugins/jquery-ui-1.10.3.custom/css/smoothness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet">
+    <link href="plugins/DataTables-1.9.4/media/css/jquery.dataTables_themeroller.css" rel="stylesheet">
+
     <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <script src="plugins/jquery-1.10.1.min.js"></script>
-    <script type="text/javascript" src="plugins/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.min.js"></script>
-    <script type="text/javascript" src="plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="plugins/jquery-1.10.2.min.js"></script>
+    <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="plugins/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="plugins/DataTables-1.9.4/media/js/jquery.dataTables.min.js"></script>
 
 
     <title>Art-project</title>
 </head>
 <body>
 <section class="body" id="advertize">
-    J'aurais voulu être un artistes
+    J 'aurais voulu être un artistes
 
 </section>
 
@@ -27,7 +30,8 @@
         <li class="active"><a href="#">Je recherche</a></li>
 
         <li class="dropdown">
-            <a class="dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#"><span>N'importe quel artiste</span><b class="caret"></b></a>
+            <a class="dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#"><span>N'importe quel artiste</span>
+                <b class="caret"></b></a>
             <ul id="menu2" class="dropdown-menu" role="menu" aria-labelledby="drop5">
                 <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un musicien</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un acteur</a></li>
@@ -38,19 +42,51 @@
             </ul>
         </li>
         <li class="dropdown">
-            <a class="dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#">Dropdown 3 <b class="caret"></b></a>
+            <a class="dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#"><span>Pour n'importe quel type de projet artistique</span>
+                <b class="caret"></b></a>
             <ul id="menu3" class="dropdown-menu" role="menu" aria-labelledby="drop5">
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Pour un projet amateur</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Pour un projet professionel</a></li>
                 <li role="presentation" class="divider"></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Pour n'importe quel type de projet
+                    artistique</a></li>
             </ul>
         </li>
     </ul>
 
 
 </section>
+
+<section class="body" class="infinite-scroll">
+    <table id="search_result_table">
+        <thead>
+        <tr>
+            <th>
+                nom1
+            </th>
+            <th>
+                nom2
+            </th>
+            <th>
+                nom3
+            </th>
+            <th>
+                nom4
+            </th>
+            <th>
+                nom5
+            </th>
+        </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+
+</section>
+
+<div id="dialog_info">
+    <span id="titre"/>
+    </div>
 
 <script type="text/javascript" src="js/functions.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
