--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,81 +12,115 @@
 
     <script src="plugins/jquery-1.10.2.min.js"></script>
     <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script src="plugins/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.min.js"></script>
     <script src="plugins/DataTables-1.9.4/media/js/jquery.dataTables.min.js"></script>
 
 
     <title>Art-project</title>
 </head>
 <body>
+<div id="fb-root"></div>
+<script src="http://connect.facebook.net/en_US/all.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/fblogin.js"></script>
+
 <section class="body" id="advertize">
-    J 'aurais voulu être un artistes
+    J
+
+    'aurais voulu être un artisteeees, la plateforme qui met en relation les artistes avec des lieux de représentation
 
 </section>
 
-<section class="body" id="search_form">
-
-    <ul class="nav nav-pills">
-        <li class="active"><a href="#">Je recherche</a></li>
-
-        <li class="dropdown">
-            <a class="dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#"><span>N'importe quel artiste</span>
-                <b class="caret"></b></a>
-            <ul id="menu2" class="dropdown-menu" role="menu" aria-labelledby="drop5">
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un musicien</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un acteur</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un conteur</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un écrivain</a></li>
-                <li role="presentation" class="divider"></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">N'importe quel artiste</a></li>
-            </ul>
-        </li>
-        <li class="dropdown">
-            <a class="dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#"><span>Pour n'importe quel type de projet artistique</span>
-                <b class="caret"></b></a>
-            <ul id="menu3" class="dropdown-menu" role="menu" aria-labelledby="drop5">
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Pour un projet amateur</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Pour un projet professionel</a></li>
-                <li role="presentation" class="divider"></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Pour n'importe quel type de projet
-                    artistique</a></li>
-            </ul>
-        </li>
+<div class="tabbable body">
+    <ul id="myTab" class=" nav nav-tabs">
+        <li><a href="#artist" data-toggle="tab">Artiste</a></li>
+        <li><a href="#host" data-toggle="tab">Hôte</a></li>
+        <li><a href="#public" data-toggle="tab">Spectateur</a></li>
+        <li><a href="#account" data-toggle="tab">Mon compte</a></li>
     </ul>
+    <div class="tab-content">
+        <div class="tab-pane fade in active" id="artist">
+            <ul class="nav nav-pills">
+                <li class="active"><a href="#">Je recherche</a></li>
 
+                <li class="dropdown">
+                    <a class="dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#"><span>N'importe quel lieu</span>
+                        <b class="caret"></b></a>
+                    <ul id="menu2" class="dropdown-menu" role="menu" aria-labelledby="drop5">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un bar</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un café</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un théâtre</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Un epace extérieur</a></li>
+                        <li role="presentation" class="divider"></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">N'importe quel lieu</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#"><span>Pour n'importe quel type de projet artistique</span>
+                        <b class="caret"></b></a>
+                    <ul id="menu3" class="dropdown-menu" role="menu" aria-labelledby="drop5">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Pour un projet amateur</a>
+                        </li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Pour un projet
+                            professionel</a></li>
+                        <li role="presentation" class="divider"></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Pour n'importe quel type de
+                            projet
+                            artistique</a></li>
+                    </ul>
+                </li>
+            </ul>
 
-</section>
+            <table id="search_result_table">
+                <thead>
+                <tr>
+                    <th>
+                        nom1
+                    </th>
+                    <th>
+                        nom2
+                    </th>
+                    <th>
+                        nom3
+                    </th>
+                    <th>
+                        nom4
+                    </th>
+                    <th>
+                        nom5
+                    </th>
+                </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+        <div class="tab-pane fade in " id="host">
+            <fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
 
-<section class="body" class="infinite-scroll">
-    <table id="search_result_table">
-        <thead>
-        <tr>
-            <th>
-                nom1
-            </th>
-            <th>
-                nom2
-            </th>
-            <th>
-                nom3
-            </th>
-            <th>
-                nom4
-            </th>
-            <th>
-                nom5
-            </th>
-        </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-
-</section>
-
-<div id="dialog_info">
-    <span id="titre"/>
+            PROFILE ... Raw denim you probably haven't heard of them jean shorts
+            Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg
+            carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi,
+            qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan
+            american apparel, butcher voluptate nisi qui.
+        </div>
+        <div class="tab-pane fade in " id="public">MESSAGES ... Aliquip placeat salvia cillum iphone.</div>
+        <div class="tab-pane fade in " id="account">Mon nom est </div>
     </div>
+</div>
+
+
+<div id="modal_info" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Modal header</h3>
+    </div>
+    <div class="modal-body">
+        <p>One fine body…</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn">Close</a>
+        <a href="#" class="btn btn-primary">Save changes</a>
+    </div>
+</div>
 
 <script type="text/javascript" src="js/functions.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
