--- a/frames/artist_presentation.html
+++ b/frames/artist_presentation.html
@@ -1,11 +1,60 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3>Je suis un artiste</h3>
+    <h3>Aide offerte aux artiste</h3>
 </div>
 <div class="modal-body">
-    <p>Oui un artiste....</p>
+    <div class="accordion" id="accordion2">
+        <div class="accordion-group">
+            <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse1">
+                    1 - On enregistre une maquette de vos compos
+                </a>
+            </div>
+            <div id="collapse1" class="accordion-body collapse">
+                <div class="accordion-inner">
+                         Pour enregistrer votre musique,...
+                </div>
+            </div>
+        </div>
+        <div class="accordion-group">
+            <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse2">
+                    2 - On réalise un dépôts de copyright de ces enregistrements pour protéger vos droits d’auteur
+                </a>
+            </div>
+            <div id="collapse2" class="accordion-body collapse">
+                <div class="accordion-inner">
+                    On vous propose des concerts
+                </div>
+            </div>
+        </div>
+        <div class="accordion-group">
+            <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse3">
+                    3 - On vous crée un espace sur internet pour rendre visible vos créations
+                </a>
+            </div>
+            <div id="collapse3" class="accordion-body collapse">
+                <div class="accordion-inner">
+                    On vous crée un compte bandcamp etc...
+                </div>
+            </div>
+        </div>
+        <div class="accordion-group">
+            <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse4">
+                    4 - On organise des concerts dans nos lieux de représentation partenaires avec d'autres membres du label
+                </a>
+            </div>
+            <div id="collapse4" class="accordion-body collapse">
+                <div class="accordion-inner">
+                    On vous crée un compte bandcamp etc...
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="modal-footer">
-    <a href="#" class="btn">Close</a>
-    <a href="#" class="btn btn-primary">Save changes</a>
+    <a href="#" class="btn close_modal">Fermer</a>
+    <a href="mailto:kijiji@cymace.com?subject=Accompagnement d'artiste&body=Decrivez votre projet musical..." class="btn btn-primary">Envoyer un email</a>
 </div>
