--- a/frames/artist_criteria.html
+++ b/frames/artist_criteria.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3>Aide offerte aux artiste</h3>
+    <h3>Conditions pour les artiste</h3>
 </div>
 
 <div class="modal-body">
@@ -8,7 +8,7 @@
         <div class="accordion-group">
             <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse1">
-                    1 - On enregistre une maquette de vos compos
+                    1 - Chanter en francais
                 </a>
             </div>
             <div id="collapse1" class="accordion-body collapse">
