--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="css/art-home.css"/>
 
-    <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="plugins/jquery-1.10.2.min.js"></script>
     <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+    <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/art-home.css"/>
 
 
     <title>Art-project</title>
@@ -17,7 +17,7 @@
 <body>
 
 <section class="body" id="advertize">
-    XX Label, le label des artistes amateurs
+    XX Label, le label des artistes amateurs qui chantent en francais
 
 </section>
 
@@ -28,21 +28,57 @@
         <li><a href="#host" data-toggle="tab">Lieux de représentation</a></li>
         <li><a href="#events" data-toggle="tab">Evenements</a></li>
         <li><a href="#faq" data-toggle="tab">FAQ</a></li>
+
+
     </ul>
     <div class="tab-content" id="main_tabcontent">
         <div class="tab-pane fade in active" id="home">
-            <ul class="nav nav-pills">
-                <li class="dropdown">
-                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#"><span>Je suis un artiste amateur</span>
-                        <b class="caret"></b></a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="drop5">
-                        <li role="presentation"><a data-mtype="artist" role="menuitem" tabindex="-1" href="#">Je suis un artiste amateur</a></li>
-                        <li role="presentation"><a data-mtype="host" role="menuitem" tabindex="-1" href="#">Je suis un lieu de représentation (café, théâtre,...)</a></li>
-                        <li role="presentation"><a data-mtype="public" role="menuitem" tabindex="-1" href="#">Je suis un spectateur amateur de chanson française</a></li>
-                    </ul>
-                </li>
-                <li class="active" id="memberType" data-mtype="artist"><button type="button" class="btn btn-primary">Qu'est-ce aue XX label peut m'apporter</button></li>
-            </ul>
+            <section>
+                <div class="section-header">
+                    <h4>Qu'est ce que c'est</h4>
+                </div>
+
+                <div class="section-body">
+
+                    XX Label est un label qui a pour but
+                </div>
+            </section>
+
+            <section>
+                <div class="section-header">
+                    <h4>Comment ca marche</h4>
+                </div>
+
+                <div class="section-body">
+
+                <ul class="nav nav-pills">
+                    <li id="button_member_type">
+                        <div class="btn-group dropdown">
+                            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                                <span>Je suis un artiste amateur</span>
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li role="presentation"><a data-mtype="artist" role="menuitem" tabindex="-1" href="#">Je
+                                    suis un artiste amateur</a></li>
+                                <li role="presentation"><a data-mtype="host" role="menuitem" tabindex="-1" href="#">Je
+                                    suis un lieu de représentation (café, théâtre,...)</a></li>
+                                <li role="presentation"><a data-mtype="public" role="menuitem" tabindex="-1" href="#">Je
+                                    suis un spectateur amateur de chanson française</a></li>
+                            </ul>
+                        </div>
+
+                    </li>
+                    <li class="active" id="criteriaInfo" data-mtype="artist">
+                        <button type="button" class="btn btn-primary">Quelles conditions dois-je remplir</button>
+                    </li>
+
+                    <li class="active" id="memberType" data-mtype="artist">
+                        <button type="button" class="btn btn-primary">Qu'est-ce aue XX label peut m'apporter</button>
+                    </li>
+                </ul>
+                </div>
+            </section>
         </div>
         <div class="tab-pane fade in " id="artist">
 
@@ -53,8 +89,8 @@
             american apparel, butcher voluptate nisi qui.
         </div>
         <div class="tab-pane fade in " id="host">MESSAGES ... Aliquip placeat salvia cillum iphone.</div>
-        <div class="tab-pane fade in " id="faq">Mon nom est <span id="username"></span> </div>
-        <div class="tab-pane fade in " id="events">Les évenements sont <span id="username"></span> </div>
+        <div class="tab-pane fade in " id="faq">Mon nom est <span id="username"></span></div>
+        <div class="tab-pane fade in " id="events">Les évenements sont <span id="username"></span></div>
     </div>
 </div>
 
