--- a/index.html
+++ b/index.html
@@ -30,35 +30,49 @@
 
 <div class="body" id="content">
     <section>
-            XX Label est un label qui a pour but
+        XX Label est un label qui a pour but
     </section>
 
     <section>
-            <div class="tabbable">
-                <ul id="myTab" class=" nav nav-pills">
-                    <li><a href="#artist" data-toggle="pill">Je suis un artiste</a></li>
-                    <li><a href="#host" data-toggle="pill">Je suis un lieux de représentation</a></li>
-                    <li><a href="#public" data-toggle="pill">Je suis un spectateur</a></li>
-                </ul>
-                <div class="tab-content">
-                    <div class="tab-pane active" id="artist">
-                        On aide les artistes qui satisfassent aux conitions suivantesdbkdhbkdh
+        <div class="tabbable">
+            <ul id="myTab" class=" nav nav-pills">
+                <li><a href="#artist" data-toggle="pill">Je suis un artiste</a></li>
+                <li><a href="#host" data-toggle="pill">Je suis un lieux de représentation</a></li>
+                <li><a href="#public" data-toggle="pill">Je suis un spectateur</a></li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane active" id="artist">
+                    On aide les artistes qui satisfassent aux conitions suivantesdbkdhbkdh
 
-                        <button id="criteriaInfo" type="button" class="btn btn-primary">Quelles conditions dois-je remplir</button>
-                    </div>
-                    <div class="tab-pane" id="host">MESSAGES ... Aliquip placeat salvia cillum iphone.</div>
-                    <div class="tab-pane" id="public">Mon nom est <span id="username"></span></div>
+                    <button id="criteriaInfo" type="button" class="btn btn-primary">Quelles conditions dois-je remplir
+                    </button>
                 </div>
+                <div class="tab-pane" id="host">MESSAGES ... Aliquip placeat salvia cillum iphone.</div>
+                <div class="tab-pane" id="public">Mon nom est <span id="username"></span></div>
             </div>
+        </div>
     </section>
     <div id="references-container">
         <section>
-               <h4>Quelques artistes membres</h4>
+            <h4>Quelques artistes membres</h4>
+
+            <div id="artiste_examples">
+                <iframe style="border: 0; width: 100%; height: 120px;"
+                        src="http://bandcamp.com/EmbeddedPlayer/album=792857558/size=medium/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+                        seamless><a href="http://qcmoka.bandcamp.com/album/quelque-chose-moka">Quelque Chose Moka</a>
+                </iframe>
+                <iframe style="border: 0; width: 100%; height: 120px;"
+                        src="http://bandcamp.com/EmbeddedPlayer/album=3180928366/size=medium/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+                        seamless><a href="http://davidboily.bandcamp.com/album/ep0">EP0 by David Boily</a></iframe>
+                <iframe style="border: 0; width: 100%; height: 120px;"
+                        src="http://bandcamp.com/EmbeddedPlayer/album=2780802847/size=medium/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+                        seamless><a href="http://karimouellet.bandcamp.com/album/fox">FOX by Karim Ouellet</a></iframe>
+            </div>
             <button type="button" class="btn btn-primary">Voir tous nos artistes</button>
         </section>
         <section>
             <h4>Quelques lieux partenaires </h4>
-            <button  type="button" class="btn btn-primary">Voir tous nos lieux partenaires</button>
+            <button type="button" class="btn btn-primary">Voir tous nos lieux partenaires</button>
         </section>
 
     </div>
