--- a/modal/host_presentation.html
+++ b/modal/host_presentation.html
@@ -6,6 +6,6 @@
     <p>Oui un hhhoo....</p>
 </div>
 <div class="modal-footer">
-    <a href="#" class="btn">Close</a>
-    <a href="#" class="btn btn-primary">Save changes</a>
+    <a href="#" class="btn close_modal">Fermer</a>
+    <a href="mailto:kijiji@cymace.com?subject=Accompagnement d'artiste&body=Decrivez votre projet musical..." class="btn btn-primary">Envoyer un email</a>
 </div>
