--- a/frames/main_presentation.html
+++ b/frames/main_presentation.html
@@ -1,1 +1,5 @@
-XX Label est un label qui a pour but de faire plein de trucs!!!
+<p>Coop Label est un label communautaire où chaque membre participe au dévelopement des artistes, à la valorisation des lieux de représentation et à l'organisation des concerts.
+L'adhésion est gratuite.
+</p>
+
+<button data-targetmodal='inscription' type="button" class="btn btn-primary">Je m'inscris</button>
