--- a/frames/main_host_presentation.html
+++ b/frames/main_host_presentation.html
@@ -1,3 +1,3 @@
-Si vous êtes un lieu de représenttaion vous pouvez nous aider
+<p>Si vous êtes un lieu de représenttaion vous pouvez nous aider</p>
 
 <button data-targetmodal='host_presentation' type="button" class="btn btn-primary">See how</button>
