--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/art-home.css"/>
     <link rel="stylesheet" type="text/css" href="css/bootstrap_custom_navbar.css"/>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap_custom_pills.css"/>
 
 
     <title>Art-project</title>
