--- a/frames/main_artist_presentation.html
+++ b/frames/main_artist_presentation.html
@@ -1,3 +1,3 @@
-<p>On aide les artistes qui débutent en musique et qui satisfassent aux conitions suivantesdbkdhbkdh</p>
+<p>On aide les artistes qui débutent en musique et qui satisfassent aux conitions suivantesdbkdhbkdh<p>
 
 <button data-targetmodal='artist_criteria' type="button" class="btn btn-primary">Quelles conditions dois-je remplir</button>
