--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap_custom_pills.css"/>
 
 
-    <title>Art-projectees</title>
+    <title>Art-projecteess</title>
 </head>
 <body>
 <header class="navbar ">
